Fix alignment on hint icons

--- a/style/app.less
+++ b/style/app.less
@@ -778,8 +778,9 @@ iframe {
     float: right;
     .attempt-icon {
         color: @gray;
-        margin-right: 0.2em;
         font-size: 1.6em;
+        margin-right: 0.2em;
+        vertical-align: middle;
     }
 
     .attempt-icon.attempt-correct {
